fixed up some code

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <br>
 
             <!-- Output for the zeros or vertex -->
-            <div id="quadratic_output">the zeros are <span id ="quadratic_answer"></div>
+            <div id="quadratic_output"><span id ="quadratic_answer"></div>
         </div>
 
         
